--- a/src/index.css
+++ b/src/index.css
@@ -15,143 +15,87 @@ code {
     monospace;
 }
 
-.header {
+body {
+  margin: 0;
   display: flex;
-  box-sizing: border-box;
+  background-color: #200441;
+  min-width: 320px;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
+#root {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+@media (max-width: 480px) {
+  #root {
+    padding-top: 0;
+  }
+}
+
+.App {
+  display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 20px;
-  min-height: 5vh;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+
+  @media (min-width:360px) {
+    gap: 2rem;
+  }
 }
 
-.container {
+.main {
   display: flex;
-  height: 100vh;
-  margin-top: 1rem;
+  justify-content: center;
+  align-content: center;
 }
 
-
-.sidebar {
+.lists {
   display: flex;
-  width: 25%;
-  min-height: 10vh;
 }
 
-.flag-icon{
-
-}
-
-.filter-button {
-  background: #9800F4;
-  border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 2rem;
-  width: 50%;
-  height: auto;
-  padding: 1rem;
-}
-
-
-
-.todo-list{
- color:black;
- list-style: none;
- font-size: 20px;
- font-family: sans-serif;
- box-sizing: border-box;
- border: 1px solid #000000;
- width: 80% ;
- border-radius: 1rem;
- height: auto;
- padding: 1rem;
- background: #bed077;
- overflow:scroll;
-}
-
-.close-icon{
-  color: #9800F4;
-}
-.flag-icon{
-  color: red;
-}
-.icons{
-  margin-left: 0%;
-}
-.position-icon{
-  margin-left: 1%;
-  float: right;
-}
-.flag-position{
-  float: right;
-  
-}
-
-
-.filter-buttontext {
-  font-family: 'Karla';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 23px;
-  padding: 20px;
-  color: #FFFFFF;
-}
-filter-button :hover{
-  box-shadow:#FFFFFF
-}
-.content {
+.list {
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: relative;
-  flex-grow: 1;
-  min-height: 10vh;
-  border: 0.25rem #9800F4 solid;
-  margin-left: 0.25rem;
-
-}
-
-.input-button {
-  background: #9800F4;
-  border: 2px solid #9800F4;
-  border-radius: 5rem;
-  height: 3.8rem;
-  width: 3.8rem;
-  
-}
-
-.plus-icon {
-  width: 1rem;
-  height: 2rem;
-  color: #FFFFFF;
-  font-weight: 700;
-
-}
-
-.input-field {
-  margin-top: 2rem;
-  background: #FFFFFF;
-  border: 2x solid #9800F4;
-  border-radius: 30px;
-  height: 2rem;
-  width: 80%;
+  background-color: #200441;
+  color: aliceblue;
   padding: 1rem;
-}
-::placeholder {
-  color: gray;
-  font-style: italic;
-  font-size: 20px;
-}
+  height: 2rem;
+  width: 1000px;
 
-.todo-label{
-  font-size: 25px;
-  font-weight: 700;
-  color: palevioletred;
 
 }
 
-.footer {
-  margin-top: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  min-height: 10vh;
-  border: 0.25rem #9800F4 solid;
+@media (max-width: 768px) {
+  .list {
+    width: 100%;
+    width: 600px;
+  }
+
+
 }
+
+@media (max-width: 480px) {
+  .list {
+    flex-direction: column;
+    width: 100%;
+    
+  }
+}
+
+
+  .list:hover {
+    background-color: #4b0a97;
+    scale: 1.04;
+    transition: 0ms;
+    border-left: 4px solid purple
+  }
