--- a/src/index.css
+++ b/src/index.css
@@ -171,11 +171,11 @@ code {
   }
   .input-button{
     font-size: 0.8rem;
-    width: 10vw;
-    height: 5vh;
-    margin: 0;
+    width: 12vw;
+    height: 6vh;
+    margin-left: 0;
     font-weight: bolder;
-    border-radius: 50%;
+
     
   }
 
